objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Number__c</fullName>
        <label>Bank Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Terminated__c</fullName>
        <label>Date Terminated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employees List</relationshipLabel>
        <relationshipName>Employees_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary_Change__c</fullName>
        <label>Salary Change</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Salary_Review_Date__c</fullName>
        <label>Salary Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administering</fullName>
                </value>
                <value>
                    <fullName>Apex Development</fullName>
                </value>
                <value>
                    <fullName>Data Loading</fullName>
                </value>
                <value>
                    <fullName>Lightning Development</fullName>
                </value>
                <value>
                    <fullName>Point&apos;n&apos;Click Configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Salary_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(Is_Active__c),ISCHANGED(Salary__c))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Salary can&apos;t be changed for disabled employees</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name)&gt;100</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name should be shorter than 100 symbols</errorMessage>
    </validationRules>
</CustomObject>